try increase memory